--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -53,4 +53,24 @@
       app:layout_constraintHorizontal_bias="0.064"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tvTimestampDetail" />
+
+  <TextView
+      android:id="@+id/tvNumLikesDetail"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="180dp"
+      android:layout_marginTop="8dp"
+      android:text="2"
+      app:layout_constraintStart_toEndOf="@+id/tvTimestampDetail"
+      app:layout_constraintTop_toBottomOf="@+id/ivPostDetail" />
+
+  <TextView
+      android:id="@+id/tvLikeDetails"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="4dp"
+      android:layout_marginTop="8dp"
+      android:text="Likes"
+      app:layout_constraintStart_toEndOf="@+id/tvNumLikesDetail"
+      app:layout_constraintTop_toBottomOf="@+id/ivPostDetail" />
 </androidx.constraintlayout.widget.ConstraintLayout>
